refactor(generator): ✨ update generator components to use centralized wiki links and improve constructor parameters